// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DnD Store Element is initiated 1`] = `
Object {
  "id-1": CoreUtils {
    "animatedFrame": null,
    "currentPosition": PointNum {
      "x": 450,
      "y": 114,
    },
    "depth": 0,
    "grid": PointNum {
      "x": 1,
      "y": 1,
    },
    "hasAttribute": Object {},
    "hasToTransform": false,
    "id": "id-1",
    "isInitialized": true,
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 114,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "ref": <div
      data-index="0"
    />,
    "translate": PointNum {
      "x": 0,
      "y": 0,
    },
  },
  "id-2": CoreUtils {
    "animatedFrame": null,
    "currentPosition": PointNum {
      "x": 450,
      "y": 172,
    },
    "depth": 0,
    "grid": PointNum {
      "x": 1,
      "y": 2,
    },
    "hasAttribute": Object {},
    "hasToTransform": false,
    "id": "id-2",
    "isInitialized": true,
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 172,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 1,
    },
    "ref": <div
      data-index="1"
    />,
    "translate": PointNum {
      "x": 0,
      "y": 0,
    },
  },
  "id-3": CoreUtils {
    "animatedFrame": null,
    "currentPosition": PointNum {
      "x": 450,
      "y": 230,
    },
    "depth": 0,
    "grid": PointNum {
      "x": 1,
      "y": 3,
    },
    "hasAttribute": Object {},
    "hasToTransform": false,
    "id": "id-3",
    "isInitialized": true,
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 230,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 2,
    },
    "ref": <div
      data-index="2"
    />,
    "translate": PointNum {
      "x": 0,
      "y": 0,
    },
  },
  "id-4": CoreUtils {
    "animatedFrame": null,
    "currentPosition": PointNum {
      "x": 450,
      "y": 288,
    },
    "depth": 0,
    "grid": PointNum {
      "x": 1,
      "y": 4,
    },
    "hasAttribute": Object {},
    "hasToTransform": false,
    "id": "id-4",
    "isInitialized": true,
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 288,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 3,
    },
    "ref": <div
      data-index="3"
    />,
    "translate": PointNum {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`DnD Store Returns all element connections and instance 1`] = `
Object {
  "branches": Object {
    "parents": undefined,
    "siblings": Array [
      "id-1",
      "id-2",
      "id-3",
      "id-4",
    ],
  },
  "element": CoreUtils {
    "animatedFrame": null,
    "currentPosition": PointNum {
      "x": 450,
      "y": 114,
    },
    "depth": 0,
    "grid": PointNum {
      "x": 1,
      "y": 1,
    },
    "hasAttribute": Object {},
    "hasToTransform": false,
    "id": "id-1",
    "isInitialized": true,
    "isPaused": false,
    "isVisible": true,
    "keys": Object {
      "CHK": null,
      "PK": "1-0",
      "SK": "0-0",
    },
    "offset": Object {
      "height": 50,
      "left": 450,
      "top": 114,
      "width": 170,
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "ref": <div
      data-index="0"
    />,
    "translate": PointNum {
      "x": 0,
      "y": 0,
    },
  },
  "parent": null,
}
`;
